@@ -7,6 +7,7 @@ set JLINK_VM_OPTIONS=^
 --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED ^
 --add-exports jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED ^
 --add-exports jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED ^
+--add-exports jdk.compiler/com.sun.tools.javac.platform=ALL-UNNAMED ^
 --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED ^
 --add-exports jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED ^
 --add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED ^
